<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_pic2"
    tools:context="com.mouna.tollpay.MainActivity">

    <TextView
        android:id="@+id/home_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerFrom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/home_from"
        android:textAlignment="viewStart"
        android:textColor="@color/home_text"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/home_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_from"
        android:layout_alignStart="@+id/home_from"
        android:layout_alignTop="@+id/spinnerTo"

        android:layout_marginEnd="28dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="28dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/home_to"
        android:textColor="@color/home_text"
        android:textSize="25dp" />

    <Spinner
        android:id="@+id/spinnerFrom"
        android:layout_width="246dp"
        android:layout_height="31dp"
        android:layout_above="@+id/spinnerTo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/darker_gray" />

    <Spinner
        android:id="@+id/spinnerTo"
        android:layout_width="246dp"
        android:layout_height="31dp"
        android:layout_above="@+id/home_nextbutton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="41dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"

        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/home_text"
        android:textColor="@color/home_text"
        android:textSize="35sp" />

    <Button
        android:id="@+id/home_nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="133dp"

        android:fontFamily="@font/averia_gruesa_libre"
        android:text="@string/home_nextbutton"
        android:textSize="25sp" />

</RelativeLayout>
